--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Simple JS App</title>
   </head>
   <body>
-    <ul class="pokemon-list"></ul>
+    <div class="container">
+      <ul class="pokemon-list"></ul>
+    </div>
     <script src="js/polyfill.min.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
