--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <title>Pokédex</title>
   </head>
-  <body>
+  <body class="bg-secondary">
     <div class="container">
-      <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-2">
         <a class="navbar-brand" href="#">
           <img
             src="./img/pokemon.png"
@@ -45,14 +45,12 @@
         >
           <form class="d-flex">
             <input
+              id="searchBar"
               class="form-control me-2"
               type="search"
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
           </form>
         </div>
       </nav>
@@ -67,7 +65,7 @@
         aria-hidden="true"
       >
         <div class="modal-dialog">
-          <div class="modal-content">
+          <div class="modal-content bg-info">
             <div class="modal-header">
               <h5 class="modal-title" id="pokemonModalLabel"></h5>
               <button
@@ -79,11 +77,14 @@
             </div>
             <div class="modal-body d-flex flex-column align-items-center">
               <div class="images d-flex justify-content-evenly">
-                <img src="" alt="" class="front" />
-                <img src="" alt="" class="back" />
+                <img class="front" />
+                <img class="back" />
               </div>
-              <p class="height"></p>
-              <p class="weight"></p>
+              <p class="height display-4"></p>
+              <p class="weight display-4"></p>
+              <p class="type display-6"></p>
+              <span class="badge bg-primary ability1"></span>
+              <span class="badge bg-success ability2"></span>
             </div>
             <div class="modal-footer">
               <button
@@ -98,14 +99,14 @@
         </div>
       </aside>
     </div>
-    <script src="./js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="js/polyfill.min.js"></script>
-    <script src="js/fetch.umd.js"></script>
-    <script src="js/scripts.js"></script>
+    <!-- <script src="./dist/js/script.js"></script> -->
+    <script src="js/script.js"></script>
+    <script src="./dist/js/polyfill.min.js"></script>
+    <script src="./dist/js/fetch.umd.js"></script>
   </body>
 </html>
