--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="./dist/js/script.js"></script> -->
-    <script src="js/script.js"></script>
+    <script src="./dist/js/script.js"></script>
     <script src="./dist/js/polyfill.min.js"></script>
     <script src="./dist/js/fetch.umd.js"></script>
   </body>
